k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
  namespace: flask-demo
spec:
  selector:
    app: flask-demo
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
